Revert "fixed a bug, 16 tests left"
This reverts commit b6affb02dd0da372e08a5f245cf520db23e2e33e.