@@ -1,9 +1,6 @@
-import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
-import java.util.Hashtable;
 import java.util.LinkedList;
-import java.util.Set;
 
 
 public abstract class SearchProblem {
@@ -13,12 +10,11 @@ public abstract class SearchProblem {
 	//1. initial state
 	State initialState;
 	//2. a set of operators
-	Hashtable <Integer, String> operators;
-	
+	LinkedList <String> operators;
 	
 	public static int exploredNodes;
 	
-	public SearchProblem(State initialState, Hashtable <Integer, String> operators) {
+	public SearchProblem(State initialState, LinkedList<String>operators) {
 		this.initialState = initialState;
 		this.operators = operators;
 	}
@@ -27,20 +23,20 @@ public abstract class SearchProblem {
 	public abstract boolean goalTest(Node node);
 	
 	//4. a state space / transition function
-	public abstract State transitionFun(Node currentNode, int op);
+	public abstract State transitionFun(Node currentNode, String op);
 	
-	//5. a path-cost function
-	public abstract int pathCost(State prevState, State newState, int op);
+	//5. a goal-test function
+	public abstract int pathCost(State prevState, State newState, String op);
 	
 	
 	//The generic search procedure
-	public static Node genericSearch(SearchProblem problem, int strategy) {
+	public static Node genericSearch(SearchProblem problem, String strategy) {
 		
 		int visited=0;
 		int depthLimit = 0;
 		
 		//a queue of nodes
-		ArrayList<Node> q = new ArrayList <Node>();
+		LinkedList<Node> q = new LinkedList <Node>();
 		
 		//add the initial state's node to the queue
 		Node node = new Node(problem.initialState, null, 0, 0, null);
@@ -48,10 +44,10 @@ public abstract class SearchProblem {
 		
 		
 		while(true) {
-			if(strategy == 1 && q.isEmpty()) { //IDS: no solution found for this depth
+			if(strategy == "ID" && q.isEmpty()) { //IDS: no solution found for this depth
 				depthLimit++; //increase the depth limit
 				//restart
-				q = new ArrayList <Node>();
+				q = new LinkedList <Node>();
 				q.add(new Node(problem.initialState, null, 0, 0, null));
 				problem.resetExploredStates();
 			}
@@ -59,7 +55,7 @@ public abstract class SearchProblem {
 				return null;
 			
 			//expand the first node in the queue
-			node = q.remove(0);
+			node = q.removeFirst();
 			visited++;
 			exploredNodes++;
 			
@@ -71,16 +67,15 @@ public abstract class SearchProblem {
 			
 			//if not, enqueue its children according to the specified search strategy
 			//however, in case of IDS we only generate its children if the node hasn't yet reached the depth limit
-			else if(strategy !=1 || node.depth != depthLimit) {
+			else if(strategy != "ID" || node.depth != depthLimit) {
 				//the children of this node are the result of all the possible operators
-				ArrayList <Node> children = new ArrayList<Node>();
+				LinkedList <Node> children = new LinkedList<Node>();
 				
-				Set<Integer> ops = problem.operators.keySet();
-		        for(Integer op: ops){  
-					State newState = problem.transitionFun(node, op.intValue());
+				for(String op : problem.operators) {
+					State newState = problem.transitionFun(node, op);
 					if(newState != null) { //operator applicable to current state
 						//the transition function returns null when the operator is not applicable
-						int newCost = node.cost + problem.pathCost(node.state, newState, op.intValue());
+						int newCost = node.cost + problem.pathCost(node.state, newState, op);
 						Node newNode = new Node(newState,node,newCost,node.depth + 1,op);
 						children.add(newNode);
 
@@ -89,78 +84,32 @@ public abstract class SearchProblem {
 				//enqueue the children in the queue according to the strategy
 				for(Node child : children) {
 					switch(strategy) {
-						case 0:
-						case 1:
-							q.add(0, child);
-							//q.addFirst(child);
+						case "DF":
+						case "ID":
+							q.addFirst(child); break;
+						case "BF":
+							q.addLast(child); break;
+						case "UC":  //Uniform cost is an insertion sort based only on the path cost g(n)
+							q.addFirst(child);
+							Collections.sort(q, Comparator.comparingInt(obj -> obj.cost));
 							break;
-						case 2:
-							q.add(child);
-							//q.addLast(child); 
+						case "GR1": //Greedy is an insertion sort based only on the heuristic function h(n)
+							q.addFirst(child);
+							Collections.sort(q, Comparator.comparingInt(obj -> problem.heuristicValue1(obj)));
 							break;
-						case 3:  //Uniform cost is an insertion sort based only on the path cost g(n)
-							q.add(child);
-							//q.addFirst(child);
-							//Collections.sort(q, Comparator.comparingInt(obj -> obj.cost));
-							//Collections.sort(q, Comparator.comparingInt(obj -> obj.getCost()));
-							Collections.sort(q, new Comparator<Node>(){
-							     public int compare(Node n1, Node n2){
-							         if(n1.cost == n2.cost)
-							             return 0;
-							         return n1.cost < n2.cost ? -1 : 1;
-							     }
-							});
-							
+						case "GR2":
+							q.addFirst(child);
+							Collections.sort(q, Comparator.comparingInt(obj -> problem.heuristicValue2(obj)));
 							break;
-						case 4: //Greedy is an insertion sort based only on the heuristic function h(n)
-							q.add(child);
-							//q.addFirst(child);
-							//Collections.sort(q, Comparator.comparingInt(obj -> problem.heuristicValue1(obj)));
-							Collections.sort(q, new Comparator<Node>(){
-							     public int compare(Node n1, Node n2){
-							         if(problem.heuristicValue1(n1) == problem.heuristicValue1(n2))
-							             return 0;
-							         return problem.heuristicValue1(n1) < problem.heuristicValue1(n2) ? -1 : 1;
-							     }
-							});
+						case "AS1": //A* is an insertion sort based on the evaluation function h(n) + g(n)
+							q.addFirst(child);
+							Collections.sort(q, Comparator.comparingInt(obj ->
+								(problem.heuristicValue1(obj) + obj.cost)));
 							break;
-						case 5:
-							q.add(child);
-							//q.addFirst(child);
-							//Collections.sort(q, Comparator.comparingInt(obj -> problem.heuristicValue2(obj)));
-							Collections.sort(q, new Comparator<Node>(){
-							     public int compare(Node n1, Node n2){
-							         if(problem.heuristicValue2(n1) == problem.heuristicValue2(n2))
-							             return 0;
-							         return problem.heuristicValue2(n1) < problem.heuristicValue2(n2) ? -1 : 1;
-							     }
-							});
-							break;
-						case 6: //A* is an insertion sort based on the evaluation function h(n) + g(n)
-							q.add(child);
-							//q.addFirst(child);
-							//Collections.sort(q, Comparator.comparingInt(obj ->
-							//	(problem.heuristicValue1(obj) + obj.getCost() )));
-							Collections.sort(q, new Comparator<Node>(){
-							     public int compare(Node n1, Node n2){
-							         if(problem.heuristicValue1(n1) + n1.cost == problem.heuristicValue1(n2) + n2.cost)
-							             return 0;
-							         return problem.heuristicValue1(n1) + n1.cost < problem.heuristicValue1(n2) + n2.cost ? -1 : 1;
-							     }
-							});
-							break;
-						case 7:
-							q.add(child);
-							//q.addFirst(child);
-							//Collections.sort(q, Comparator.comparingInt(obj ->
-							//	(problem.heuristicValue2(obj) + obj.getCost() )));
-							Collections.sort(q, new Comparator<Node>(){
-							     public int compare(Node n1, Node n2){
-							         if(problem.heuristicValue2(n1) + n1.cost == problem.heuristicValue2(n2) + n2.cost)
-							             return 0;
-							         return problem.heuristicValue2(n1) + n1.cost < problem.heuristicValue2(n2) + n2.cost ? -1 : 1;
-							     }
-							});
+						case "AS2":
+							q.addFirst(child);
+							Collections.sort(q, Comparator.comparingInt(obj ->
+								(problem.heuristicValue2(obj) + obj.cost)));
 							break;
 					}
 				}
@@ -194,9 +143,9 @@ class Node{
 	int depth;
 	
 	//5. operator resulting in this node
-	Integer operator;
+	String operator;
 	
-	public Node(State state, Node parent, int cost, int depth, Integer operator) {
+	public Node(State state, Node parent, int cost, int depth, String operator) {
 		this.cost=cost;
 		this.state=state;
 		this.parent=parent;
@@ -206,9 +155,5 @@ class Node{
 	
 	public String toString() {
 		return "Cost: " + cost;
-	}
-	
-	public int getCost() {
-		return this.cost;
 	}
 }
